Fix edit comment's CSS on narrow screens

--- a/resources/comments.scss
+++ b/resources/comments.scss
@@ -78,10 +78,8 @@ a {
 }
 
 .comment-post-wrapper {
-    div {
-        padding-bottom: 2px;
-        padding-right: 10px;
-    }
+    padding-bottom: 2px;
+    padding-right: 10px;
 
     input, textarea {
         min-width: 100%;
